@@ -8,8 +8,8 @@ BaseURL    = "/pfpc/bumblebee/index.php"
 
 [error_handling]
 ; set these to 0 for production systems, 1 for development/debugging
-VerboseSQL = 0
-AllWarnings = 0
+VerboseSQL = 1
+AllWarnings = 1
 VerboseData = 0
 
 [auth]
@@ -37,7 +37,7 @@ usualtimemarks = 4
 usualcallength = 4
 usualcalhistory = 1
 ; default timeslot picture for a new instrument
-usualtimeslotpicture = "[0-6]<08:00-13:00/1,13:00-18:00/1,18:00-32:00/1>"
+usualtimeslotpicture = "[0-6]<08:00-13:00/1;13:00-18:00/1;18:00-32:00/1,Overnight booking>"
 ; default length of a "half day" and "full day" for when calculating booking costs
 usualhalfdaylength = 5
 usualfulldaylength = 8
