@@ -222,15 +222,6 @@ class BookingEntry extends DBRow {
     $this->_checkMinNotice();
     return $this->displayAsTable();
   }
-
-  function displayAsTable() {
-    $t = "<table class='tabularobject'>";
-    foreach ($this->fields as $k => $v) {
-      $t .= $v->displayInTable(2);
-    }
-    $t .= "</table>";
-    return $t;
-  }
   
   /**
    * check that the booking slot is indeed free before booking it
