@@ -62,14 +62,4 @@ class ConsumableUse extends DBRow {
   function display() {
     return $this->displayAsTable();
   }
-
-  function displayAsTable() {
-    $t = '<table class="tabularobject">';
-    foreach ($this->fields as $k => $v) {
-      $t .= $v->displayInTable(2);
-    }
-    $t .= '</table>';
-    return $t;
-  }
-
 } //class Consumable
