@@ -51,13 +51,4 @@ class ClassCost extends DBRow {
     return $this->displayAsTable();
   }
 
-  function displayAsTable() {
-    $t = '<table class="tabularobject">';
-    foreach ($this->fields as $k => $v) {
-      $t .= $v->displayInTable(2);
-    }
-    $t .= '</table>';
-    return $t;
-  }
-
 } //class ClassCost
