@@ -67,13 +67,5 @@ class Project extends DBRow {
     return $this->displayAsTable();
   }
 
-  function displayAsTable() {
-    $t = '<table class="tabularobject">';
-    foreach ($this->fields as $k => $v) {
-      $t .= $v->displayInTable(2);
-    }
-    $t .= '</table>';
-    return $t;
-  }
 
 } //class Project
